--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -28,6 +28,7 @@
   "errorOccurred": "An error occurred",
   "couldntUnlink": "Couldn't unlink",
   "couldntLink": "Couldn't link to",
+  "couldntLoginWith": "Couldn't log in with",
   "credentialsAlreadyInUse": "This credential is already associated with a different user account",
   "emailAlreadyInUse": "The email address is already in use by another account",
   "signInWithGoogle": "Sign in with Google",
